// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InputFilter should match input filter with loading 1`] = `
<div>
  <div>
    <button
      class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand text-xs h-7 px-2 rounded bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral"
      type="button"
    >
      <div
        class="flex w-12 justify-center"
      >
        <div
          class="aspect-square border-2  rounded-full border-solid border-neutral-350 border-r-neutral-50 animate-spin w-4 "
          data-testid="spinner"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`InputFilter should match input filter with value 1`] = `
<div>
  <div>
    <button
      class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand text-xs h-7 px-2 rounded bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral"
      type="button"
    >
      Option 1
      <span
        class="relative left-1 px-1 py-1"
        data-testid="clear-btn"
        role="button"
      >
        <i
          aria-hidden="true"
          class="fa-regular fa-xmark "
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`InputFilter should match input filter without value 1`] = `
<div>
  <div>
    <button
      class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand text-xs h-7 px-2 rounded bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral gap-2"
      type="button"
    >
      Filter
      <i
        aria-hidden="true"
        class="fa-regular fa-magnifying-glass "
      />
    </button>
  </div>
</div>
`;
